[package]
name = "kerr"
version = "0.1.0"
authors = ["Christopher Sebastian <csebastian3@gmail.com>"]
license = "MIT"
repository = "https://github.com/likebike/kerr"
description = """Kernighan Errors for Rust"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
